@@ -1,3 +1,7 @@
+2025-09-11  Robby Stephenson  <robby@periapsis.org>
+
+	* Fixed crashing bug for collections without a title field.
+
 2025-09-10  Robby Stephenson  <robby@periapsis.org>
 
 	* Fixed crashing bug for opening truncated files (Bug 509364).
